# Lifeguard

./: .gitignore  Cargo.toml  GETTING_STARTED.md  README.md  test.py
.github/workflows/: build_binaries.yml  lifeguard.yml
docs/: architecture.md  effects_and_errors.md  implicit_imports.md
resources/: Cargo.toml
resources/scripts/: merge_overload_effects.py
resources/stubs/shared/: decorator.pyi
resources/stubs/stdlib/: _codecs.pyi  _struct.pyi  binascii.pyi  contextlib.pyi  functools.pyi  inspect.pyi  itertools.pyi  (+10 more)
src/: Cargo.toml  analyzer.rs  bindings.rs  builtins.rs  cache.rs  class.rs  cursor.rs  effects.rs  errors.rs  exports.rs  find_sources.rs  format.rs  graph.rs  hasher.rs  imports.rs  lib.rs  main.rs  manual_override.rs  module_effects.rs  module_info.rs  module_parser.rs  module_safety.rs  output.rs  project.rs  runner.rs  source_analyzer.rs  source_map.rs  stub_analyzer.rs  stubs.rs  test_lib.rs  tracing.rs  traits.rs
src/commands/: analyze_binary.rs  analyze_library.rs  compare_paths.rs  gen_source_db.rs  mod.rs  run_tree.rs
src/pyrefly/: definitions.rs
testdata/sample_project/: has_finalizer.py  main.py  unsafe_module.py
tests/: Cargo.toml  attrs.rs  basic.rs  cache.rs  calls.rs  constructors.rs  decorators.rs  effects.rs  exceptions.rs  explicit_lazy_imports.rs  find_sources.rs  gen_source_db.rs  imports.rs  nested_functions.rs  output.rs  param_mutation.rs  port_test_catch_implicit_imports.rs  port_test_catch_import_cycles.rs  run_tree.rs  source_analyzer.rs  stubs.rs
tests/common/: mod.rs
tests/e2e/: Cargo.toml  test_e2e.rs
(+54 files in other folders)
